# ProjectTerra

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh
.github/workflows/: evolve.yml
configs/: evolution_state.json  seed_tasks.json  terra.yaml
models/tokenizer/: tokenizer.json  tokenizer_config.json
scripts/: cloud_train.py  run_evolution.py  setup.sh  triage.py
src/agents/: multimodal_planner.py  research_agent.py
src/core/: cli.py  issue_tracker.py  llm_client.py  orchestrator.py  session_logger.py
src/data/: downloader.py  generator.py  multimodal_downloader.py
src/evaluation/: benchmarks.py
src/training/: audio_encoder.py  cloud.py  image_generator.py  model.py  multimodal.py  pretrain.py  sft.py  speech_decoder.py  tokenizer.py  train_multimodal.py  trainer.py  vision_encoder.py
