[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[project]
name = "projectterra"
version = "0.1.0"
description = "Self-evolving multimodal LLM trained from scratch, runs on consumer hardware"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "torch>=2.4.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.44.0",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.20.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.26.0",
    "lm-eval>=0.4.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
cloud = ["modal>=0.64.0"]
finetune = ["peft>=0.13.0", "trl>=0.12.0", "bitsandbytes>=0.44.0"]
mlx = ["mlx>=0.21.0", "mlx-lm>=0.20.0"]
speech = ["torchaudio>=2.4.0"]
vision = ["torchvision>=0.19.0", "Pillow>=10.0"]
multimodal = ["torchvision>=0.19.0", "torchaudio>=2.4.0", "Pillow>=10.0"]
dev = ["pytest>=8.0", "ruff>=0.7.0"]

[project.scripts]
terra = "src.core.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
